--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,25 @@
 
+# Clone the repository
+git clone https://github.com/your-username/my-website.git
+
+# Navigate to the repository directory
+cd my-website
+
+# Create index.html with your content
+echo '<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WIZZYFX TRAINING HUB</title>
+</head>
+<body>
+    <h1>Welcome to my Trading channel !</h1>
+    <p>This is a platform whereby you'll get to learn how market trends and flactuate.</p>
+</body>
+</html>' > index.html
+
+# Add, commit, and push the file to GitHub
+git add index.html
+git commit -m "Add initial index.html file"
+git push origin main
