--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,9 @@ echo '<!DOCTYPE html>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WIZZYFX TRAINING HUB</title>
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/Wizzy254/Tonny/main/Style.css">
 </head>
+</html>
 <body>
     <h1>Welcome to my Trading channel !</h1>
     <p>This is a platform whereby you'll get to learn how market trends and flactuate.</p>
